# dossierdata_prov_poc

./: .gitignore  README.md  TROUBLESHOOTING.md  dossier-review.md  dossiertype_template.md  main.py  migrate_aanvraag.py  pyproject.toml  revert_migrate_aanvraag.py  stress_test.py  test_requests.sh
docs/: file_tree.md  pipeline_architecture.md  plugin_guidebook.md
dossier_app/: pyproject.toml
dossier_app/dossier_app/: config.yaml  main.py
dossier_app_repo/dossier_app/: config.yaml
dossier_app_repo/dossier_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dossier_common/: pyproject.toml
dossier_common_repo/dossier_common/: __init__.py  signing.py
dossier_common_repo/dossier_common.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dossier_common_repo/tests/: test_signing.py
dossier_engine/: pyproject.toml
dossier_engine/dossier_engine/: app.py  entities.py  file_refs.py  lineage.py  plugin.py  prov_iris.py  worker.py
dossier_engine/dossier_engine/db/: models.py  session.py
dossier_engine/dossier_engine/engine/: __init__.py  lookups.py  response.py  state.py
dossier_engine/dossier_engine/engine/pipeline/: authorization.py  generated.py  handlers.py  invariants.py  persistence.py  relations.py  tasks.py  used.py
dossier_engine/dossier_engine/routes/: __init__.py  _serializers.py  _typed_doc.py  activities.py  dossiers.py  entities.py  files.py  prov.py  prov_columns.py
dossier_engine/dossier_engine/routes/templates/: prov_timeline.html
dossier_engine/tests/integration/: test_cancel_matching_tasks.py  test_engine_completeness.py  test_http_routes.py  test_lineage.py  test_middle_phases.py  test_process_generated.py  test_prov_endpoints.py  test_requeue_selection.py  test_resolve_used.py  test_route_helpers.py  test_side_effects.py  test_task_supersede.py
dossier_engine/tests/unit/: test_invariants.py  test_refs_and_plugin.py  test_worker_helpers.py
dossier_engine_repo/: alembic.ini  pyproject.toml
dossier_engine_repo/alembic/: env.py
dossier_engine_repo/alembic/versions/: 6226f68ae484_add_agent_uri_column.py  9d887db892c9_initial_schema.py  a3c1e7d4f890_add_domain_relations.py  a3c1e7f29b01_eligible_activities_text_to_jsonb.py
dossier_engine_repo/dossier_engine/: app.py  archive.py  entities.py  lineage.py  migrations.py  plugin.py  prov_iris.py  sentry.py  sentry_integration.py  worker.py
dossier_engine_repo/dossier_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dossier_engine_repo/dossier_engine/auth/: __init__.py
dossier_engine_repo/dossier_engine/builtins/: __init__.py  exceptions.py
dossier_engine_repo/dossier_engine/db/: __init__.py  models.py  session.py
dossier_engine_repo/dossier_engine/db/models/: rows.py
dossier_engine_repo/dossier_engine/engine/: __init__.py  context.py  errors.py  refs.py  scheduling.py  state.py
dossier_engine_repo/dossier_engine/engine/pipeline/: _identity.py  authorization.py  eligibility.py  exceptions.py  finalization.py  generated.py  invariants.py  persistence.py  preconditions.py  relations.py  side_effects.py  status.py  tasks.py  tombstone.py  used.py  validators.py
dossier_engine_repo/dossier_engine/engine/pipeline/_helpers/: eligibility.py
dossier_engine_repo/dossier_engine/plugin/: __init__.py  validators.py
dossier_engine_repo/dossier_engine/prov/: namespaces.py
dossier_engine_repo/dossier_engine/routes/: __init__.py  _activity_visibility.py  _errors.py  _models.py  _typed_doc.py  access.py  activities.py  dossiers.py  entities.py  files.py  form_schema.py  prov.py  prov_columns.py  reference.py  workflows.py
dossier_engine_repo/dossier_engine/routes/templates/: prov_columns.html
dossier_engine_repo/tests/: conftest.py
dossier_engine_repo/tests/integration/: test_authorize.py  test_check_exceptions.py  test_derivation_validation.py  test_domain_relations.py  test_engine_completeness.py  test_ensure_external_entity.py  test_exception_lifecycle.py  test_fixture_smoke.py  test_http_activities.py  test_http_routes.py  test_middle_phases.py  test_persistence_and_tail.py  test_preconditions.py  test_process_generated.py  test_process_tasks_and_lookups.py  test_prov_endpoints.py  test_reference_validate.py  test_repository.py  test_resolve_used.py  test_route_helpers.py  test_run_handler.py  test_side_effects.py  test_toelatingen_plugin.py  test_worker_lookups.py  test_worker_orchestration.py  test_workflow_rules.py
dossier_engine_repo/tests/unit/: test_activity_visibility.py  test_alembic_startup.py  test_app_factory_lifespan.py  test_deadlock_retry.py  test_generated_helpers.py  test_invariants.py  test_prov_iris_refs.py  test_refs_and_plugin.py  test_scheduling.py  test_sentry.py  test_valideer_exception.py  test_worker_helpers.py
dossier_generic_ui_repo/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dossier_generic_ui_repo/src/: App.vue  router.ts  style.css
dossier_toelatingen/: pyproject.toml
dossier_toelatingen/dossier_toelatingen/: workflow.yaml
dossier_toelatingen/dossier_toelatingen/relation_validators/: __init__.py
dossier_toelatingen/dossier_toelatingen/tasks/: __init__.py
dossier_toelatingen/dossier_toelatingen/validators/: __init__.py
dossier_toelatingen_repo/: pyproject.toml
dossier_toelatingen_repo/dossier_toelatingen/: __init__.py  constants.py  entities.py  field_validators.py  workflow.yaml
dossier_toelatingen_repo/dossier_toelatingen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
file_service/: pyproject.toml
file_service/file_service/: app.py
file_service/tests/: test_file_service.py
file_service_repo/: pyproject.toml
file_service_repo/file_service/: __init__.py  app.py
file_service_repo/file_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gov_dossier_app/: config.yaml
gov_dossier_engine/: app.py  entities.py  file_refs.py  lineage.py  plugin.py  worker.py
gov_dossier_toelatingen/: __init__.py  entities.py  workflow.yaml
gov_file_service/: __init__.py  app.py
scripts/: check_migrations_append_only.py
(+33 files in other folders)
