[project]
name = "file-service"
version = "0.1.0"
description = "Standalone file upload/download service with HMAC-signed URLs"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "dossier-common>=0.1.0,<0.2.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.26.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["file_service*"]
